testsuite/tests/typecheck/should_fail/UnliftedNewtypesFamilyKindFail2.stderr

UnliftedNewtypesFamilyKindFail2.hs:12:20: error:
    • Expected a type, but ‘5’ has kind ‘GHC.Num.Natural.Natural’
    • In the first argument of ‘F’, namely ‘5’
      In the newtype instance declaration for ‘F’
